--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,3 +52,7 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: false
+Style/SlicingWithRange:
+  Enabled: false
